# cog

./: .gitignore  Changelog.md  README.md  TEMPLATES.md  TODO.md  requirements.txt  setup.cfg
cog/: cmd.py  config.py  directory.py  util.py
cog/cli/: access.py  access.yaml  access_argparser.py  cmd_access.py  cmd_group.py  cmd_netgroup.py  cmd_user.py  netgroup.yaml  netgroup_argparser.py  user.py  user.yaml  user_argparser.py
cog/config/: settings.py  templates.py
cog/objects/: group.py  netgroup.py  user.py
cog/util/: io.py  misc.py  passwd.py
config/: settings  settings.local  templates.yaml
test/: test_directory.py
