[metadata]
name = cog
summary = configurable command-line LDAP directory manager
author = Miroslaw Baran
author-email = miroslaw+p+cog@makabra.org
description-file = README.md
version = 2.0
license = BSD

[files]
packages = cog
data_files =
    etc/cog =
        config/settings
        config/templates.yaml
    etc/cog/examples =
        config/settings.local

[entry_points]
console_scripts =
    cog = cog.cmd:cli
