[metadata]
name = cog
summary = a flexible manager for modestly-sized LDAP directories
author = Miroslaw Baran
author-email = miroslaw+p+cog@makabra.org
description-file = README.md
version = 2.1
license = BSD

[files]
packages = cog
data_files =
    etc/cog =
        config/settings
        config/templates.yaml
    etc/cog/examples = config/settings.local
    etc/cog/examples/templates = config/templates/*

[entry_points]
console_scripts =
    cog = cog.cmd:cli
